--- a/WebApplication.Tests/WebApplication.Tests.csproj
+++ b/WebApplication.Tests/WebApplication.Tests.csproj
@@ -9,12 +9,14 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.1.3" />
     <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="microsoft.aspnetcore" Version="2.1.2" />
     <PackageReference Include="microsoft.aspnetcore.mvc" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="moq" Version="4.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.109.2" />
   </ItemGroup>
 
   <ItemGroup>
